2011-08-17 Sancho Lerena  <slerena@artica.es>

	* snmp_wizard.png: New icon for new feature SNMP Wizard in 
	agent godmode (taken from enterprise massive SNMP module).

	* operation/snmpconsole/snmp_view.php: Fixed small ACL bug.

2011-08-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_networkmap.php: Fixed a bug with topology map


2011-08-17 Javier Lanz <javier.lanz@artica.es>

	* operation/snmpconsole/snmp_view.php: Fixed an style icon small bug

2011-08-17  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: added better message when could
	delete agent with remote config.

2011-08-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: check if Pandora can delete the conf and md5
	file in function "agents_delete_agent"
	
	* godmode/agentes/modificar_agente.php: show message of result from the
	deleting action.
	
	Fixes: #3392526

2011-08-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: fixes more things, see
	the item in sourceforge tracker.
	
	Fixes: #3389987

2011-08-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.oracle.sql: Added columns 'module_action_threshold' and 
	'last_execution' on 'talert_template_module_actions' table.
	* include/functions_agents.php: Correct bad sintax query.

2011-08-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* images/networkmap/so_vmware.png: Added icon of VMware for networkamps

2011-08-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/oracle.php
	include/functions_config.php
	operation/agentes/estado_ultimopaquete.php
	godmode/agentes/agent_manager.php: Changed some queries in order to make 
	them compatible with Oracle.
	
2011-08-17 Dario Rodriguez <dario.rodriguez@artica.es>
